Asserts all the doubling tests